syntax="proto3";

package pb;

option go_package="github.com/longln/simplebank/pb";

import "user.proto";

message UpdateUserRequest {
    string userName = 1;
    optional string fullName = 2;
    optional string email = 3;
    optional string password = 4;
}

message UpdateUserResponse {
    User user = 1;
}
