syntax="proto3";

package pb;

option go_package="github.com/longln/simplebank/pb";

import "rpc_create_user.proto";
import "rpc_login_user.proto";


service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc loginUser (LoginUserRequest) returns (LoginUserResponse) {}
}
